--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-/RotaryEncoder.X/nbproject/private/
-/RotaryEncoder.X/dist/default/
-/RotaryEncoder.X/build/default/
+/*.X/nbproject/private/
+/*.X/dist/default/
+/*.X/build/default/
+/*.X/nbproject/Makefile-genesis.properties
+/*.X/nbproject/Makefile-local-default.mk
